[package]
name = "compass"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.25.8"
tree-sitter-javascript = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-go = "0.23.4"
tree-sitter-zig = "1.1.2"
tree-sitter-java = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-swift = "0.7.1"
serde_json = "1.0.141"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
